# django-e-commerce

./: .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: cart_detail.html
core/: settings.py  urls.py  utils.py  views.py
orders/: admin.py  constants.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_payment_address_and_more.py  0003_alter_order_payment_address_and_more.py
orders/templates/orders/: order_confirm.html  order_create.html  order_list.html
orders/templatetags/: orders_extras.py
products/: admin.py  models.py  urls.py  views.py
products/management/commands/: seed_categories.py  seed_seosonal_events.py
products/migrations/: 0001_initial.py  0002_alter_product_seosonal_event_alter_productimage_alt_and_more.py  0003_product_image_alter_productimage_product_line.py  0004_remove_product_image.py
products/templates/products/: product_detail.html  product_list.html  product_search.html
products/templatetags/: products_extras.py
static/css/: tw.css  tw.dev.css
templates/: 404.html  500.html  about.html  home.html  layout.html
templates/includes/: footer.html  form.html  navbar.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_address_user.py
users/templates/users/: sign_in.html  sign_up.html
